--- a/Sam's Web Portfolio/index.html
+++ b/Sam's Web Portfolio/index.html
@@ -39,7 +39,7 @@
             <li><a href="#about-me">About Me</a></li>
             <li><a href="#work-experience">Work Experience</a></li>
             <li><a href="#services">Achievements</a></li>
-            <li><a href="#" id="contact">Contact Me</a></li>
+<!--             <li><a href="#" id="contact">Contact Me</a></li> -->
           </ul>
         </div>
       </nav>
@@ -171,7 +171,7 @@
             <li><a href="#home">Home</a></li>
             <li><a href="#about-me">About</a></li>
             <li><a href="#services">Achievements</a></li>
-            <li><a href="#contact">Contact</a></li>
+<!--             <li><a href="#contact">Contact</a></li> -->
           </ul>
         </div>
       </div>
