--- a/Sam's Web Portfolio/index.html
+++ b/Sam's Web Portfolio/index.html
@@ -18,7 +18,6 @@
       content="Sam's Web Portfolio showcasing skills, achievements, and work experience in web development and design."
     />
     <meta property="og:image" content="logo.png" />
-    <meta property="og:url" content="https://www.sam'sportfolio.com" />
     <title>Sam's - Web Portfolio</title>
     <link rel="stylesheet" href="style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -39,7 +38,7 @@
             <li><a href="#about-me">About Me</a></li>
             <li><a href="#work-experience">Work Experience</a></li>
             <li><a href="#services">Achievements</a></li>
-<!--             <li><a href="#" id="contact">Contact Me</a></li> -->
+            <!-- <li><a href="#" id="contact">Contact Me</a></li> -->
           </ul>
         </div>
       </nav>
@@ -140,7 +139,7 @@
         </div>
       </section>
 
-      <section>
+      <!-- <section>
         <hr />
         <div class="social-media">
           <span class="text-gray">Checkout me on</span>
@@ -158,7 +157,7 @@
             <div>@Coding_with_Sam</div>
           </div>
         </div>
-      </section>
+      </section> -->
     </main>
 
     <footer>
@@ -171,14 +170,14 @@
             <li><a href="#home">Home</a></li>
             <li><a href="#about-me">About</a></li>
             <li><a href="#services">Achievements</a></li>
-<!--             <li><a href="#contact">Contact</a></li> -->
+            <!-- <li><a href="#contact">Contact</a></li> -->
           </ul>
         </div>
       </div>
 
       <div class="footer-rights">
-        Contact -- sammittal2010@gmail.com | Copyright &#169; Sam | All Rights
-        Reserved.
+        <!-- Contact -- sammittal2010@gmail.com--> Copyright &#169; Sam | All Rights Reserved.
+
       </div>
     </footer>
 
