--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <li><a href="#about-me">About Me</a></li>
             <li><a href="#work-experience">Work Experience</a></li>
             <li><a href="#services">Achievements</a></li>
-            <!-- <li><a href="#" id="contact">Contact Me</a></li> -->
+            <li><a href="#" id="contact">Contact Me</a></li>
           </ul>
         </div>
       </nav>
@@ -139,9 +139,9 @@
         </div>
       </section>
 
-      <!-- <section>
+      <section>
         <hr />
-        <div class="social-media">
+   <div class="social-media"> 
           <span class="text-gray">Checkout me on</span>
           <h1 class="h1-social-media">Social Media</h1>
           <div class="insta">
@@ -157,7 +157,7 @@
             <div>@Coding_with_Sam</div>
           </div>
         </div>
-      </section> -->
+      </section> 
     </main>
 
     <footer>
@@ -170,13 +170,13 @@
             <li><a href="#home">Home</a></li>
             <li><a href="#about-me">About</a></li>
             <li><a href="#services">Achievements</a></li>
-            <!-- <li><a href="#contact">Contact</a></li> -->
+            <li><a href="#contact">Contact</a></li>
           </ul>
         </div>
       </div>
 
       <div class="footer-rights">
-        <!-- Contact -- sammittal2010@gmail.com--> Copyright &#169; Sam | All Rights Reserved.
+       Contact -- sammittal2010@gmail.com Copyright &#169; Sam | All Rights Reserved.
 
       </div>
     </footer>
